css/innerpage.css
/* ... */
#loginform .logingroup input {
  width: 200px;
  height: 20px;
  margin-top: -8px;
  margin-bottom: 2px;
  color: #000000;
  padding-left: 6px;
}
#loginoverlay {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: fixed;
  background-color: #000;
  z-index: 95;
  display: none;
}
#loginmenu {
  position: fixed;
  background-image: url(../images/loginpanel.png);
  z-index: 100;
  height: 187px;
  width: 307px;
  left: 50%;
  top: 50%;
  margin-left: -153px;
  margin-top: -93px;
  display: none;
}

#logininner {
  top:34px;
  left:48px;
}

.rgform {
  margin-bottom: 310px;
  color: #000000;
}
.imageleft {
  position: relative;
  float: left;
  padding-right: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
}
.imageright {
  position: relative;
  float: right;
  padding-left: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
}
.floatleft {
  float: left;
  margin-right: 15px;
}
.floatleftnomargin {
  float: left;
}
.floatright {
  float: right;
  margin-left: 15px;
}
.floatrightsol {
  float:right;
  margin-top: 40px;
}
.vizenginegraph {
  padding:40px 44px;
}


/*headernavmenubegin */
#navcontainer {
  position: absolute;
  top: 50px;
  left: 328px;
  font-size: 10pt;
  font-family: Antic;
  z-index: 100;
}
ul#navlist {
  font-family: Antic;
  color: #ffffff;
  padding: 10px;
}
 ul#navlist a {
   text-decoration: none;
   font-family: Questrial;
 }
 ul#navlist,
 ul#navlist ul,
 ul#navlist li {
   margin: 0px;
   padding: 0px;
   list-style-type: none;
 }
 ul#navlist li {  float: left }
 ul#navlist li a {
   color: #ffffff;
   padding: 10px;
 }
 ul#navlist li:hover a {
   color: #;
   background-color: #3E3E47;
   opacity: 0.9;
 }
 ul#navlist li a:hover {
   color: #ffcc33;
   background-color: #3E3E47;
   opacity: 0.9;
 }
 ul#navlist li a:active {
   color: #000000;
   background-color: #3E3E47;
   padding: 10px;
 }

ul.subnavlist {  display: none }
ul.subnavlist li {  float: none }
ul.subnavlist li a {
   padding: 0px;
   margin: 0px;
   color: ACB5D4;
   background-color: #3E3E47;
 }
ul#navlist li:hover ul.subnavlist {
  display: block;
  position: absolute;
  font-size: 9pt;
  padding-top: 10px;
}
 ul#navlist li:hover ul.subnavlist li a {
   display: block;
   width: 10em;
   border: none;
   border-left: 2px;
   padding: 10px;
   opacity: 0.9;
 }
 ul#navlist li:hover ul.subnavlist li a:before {  content: "" }
/*headernavmenuend */
#leftpanellegal {
  width: 510px;
  float: left;
  padding: 10px;
  padding-top: 0px;
}

#rightpanellegal {
  width: 510px;
  float: left;
  padding: 10px;
  padding-top: 0px;
}

#pagetitle {
  top: 28px;
  position: absolute;
  text-align: right;
}
#pagetitle p {
  font-size: 18px;
  font-family: Abel;
  color: #8A8FA8;
  line-height: normal;
  padding-bottom: 12px;
}

#leftpanel {
  width: 196px;
  margin-right: 41px;
  float: left;
  padding-bottom: 20px;
}
#leftpanel p{
  width: 196px;
  margin-right: 41px;
  float: left;
  padding-bottom: 20px;
}
#middlepanel {
  width: 600px;
  padding-right: 41px;
  float: left;
  padding-bottom: 20px;
}
.limiddle {
  list-style-type: square;
  color: #8A8FA8;
  margin-left: 10px;
}
.whitepaperslist {
  list-style-type: square;
  color: #8A8FA8;
  font-size: 8pt;
  margin-left: 10px;
  margin-bottom: -10px;
}
.limiddlepanel {
  list-style-type: square;
  color: #8A8FA8;
  margin-left: 10px;
  margin-bottom: -10px;
}
#rightpanel {
  background-image: url(../images/rpagepannel.png);
  margin-top: 74px;
  width: 192px;
  float: left;
  height: 400px;
  background-repeat: no-repeat;
}
#hilightpaneltext {
  position: relative;
  top: 20px;
  width: 140px;
  left: 30px;
}
#hilightpaneltext ul li {
   position: relative;
   list-style-type: square;
   color: #9FA5C2;
   font-size: 8pt;
   margin-bottom: 10px;
   top: 20px;
   left: 20px;
   width: 120px;
 }

.center1panel {
  float: left;
  margin-right:22px;
  width:185px;
}

.center2panel {
  float: left;
  margin-right:22px;
  width:185px;
}

.center3panel {
  float: left;
  width:185px;
}

/*about*/
.aboutlogo {
  float: left;
  top: 20px;
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 40px;
}
/*about*/
/*analyticsdatabase*/
#adpanel {
  width: 283px;
  float: left;
}
#adpanel ul li {
  list-style-type: square;
  color: #8A8FA8;
  margin-left: 20px;
}
#adrightpanel h2 {
  font-size: 11px;
  font-family: Rexlia;
  font-weight: normal;
  color: #ffffff;
  list-style-type: none;
  text-decoration: none;
  padding-bottom: 4px;
  padding-top: 4px;
}
/*analyticsdatabase*/
/*solutions*/
#solutionscard1 {
  background-image: url(../images/analyticsdatabasecard.png);
  height: 136px;
  width: 284px;
  margin-right: 30px;
  float: left;
}
#solutionscard2 {
  background-image: url(../images/visualizationenginecard.png);
  height: 136px;
  width: 284px;
  float: left;
  margin-bottom: 46px;
}
.cards {
  width: 160px;
  float: left;
  padding-left: 154px;
  padding-top: 16px;
}
.cards p {
  padding:2px;
  color: #000000;
  font-size:13px;
}
/*solutions*/

/*support*/
.supportbuttons {
  margin:10px;
  float:left;
  left:20px;
  height:46px;
  width:258;
}
/*support*/

/*console*/
#console {
  height: 240px;
  width: 600px;
  background-color: #141417;
}
#output {
  height: 180px;
  width: 600px;
  background-color: #141417;
  margin-bottom: 20px;
}
#inputconsole {
  background-color: transparent;
  margin-left:5px;
  margin-top:5px;
  height:217px;
  font-family:courier;
  width:595px;
  resize: none;
}
/*console*/
/*consolemenubegin*/
#conlist {
  color: white;
  background-color: transparent;
  width: 116px;
  height: 23px;
  background-image: url(../images/consoleexamples.png);
}
#conlist:hover {  opacity: 0.7 }
#active1:hover li {  display: block }
#active1 li {  display: none }
#concontainer {
  width: 100px;
  background-color: transparent;
  float: left;
  z-index: 5;
}
 #concontainer a {
   color: ffcc33;
   font-family: abel;
   width: 120px;
   display: block;
   height: 23px;
   font-size: 12px;
   padding-left: 8px;
   padding-top: 2px;
 }
/* ... */

